--- a/src/main/webapp/resources/css/book.css
+++ b/src/main/webapp/resources/css/book.css
@@ -1,18 +1,4 @@
-.has-error input {
-    border:1px solid red;
-}
-.has-error .error {
-    margin-left: 15px;
-    color: red;
-}
-.alert-danger {
-    background-color: #ff0000;
-    display: inline-block;
+caption {
     font-size: 24px;
-    font-family: "Times New Roman", "Arial",serif;
-    border-radius: 5px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    text-align: center;
-
+    margin: auto;
 }
